# moss

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  CODE_REVIEW_LIST.md  README.md  analyze_malloc.py
example/: CMakeLists.txt  depth_test.c  main.c  rebuild_shaders.sh
example/shaders/: shader.frag  shader.vert
include/moss/: app_info.h  camera.h  engine.h  result.h  sprite.h  sprite_batch.h  version.h  vertex.h  window_config.h
src/: README.md  camera.c  crate.c  engine.c  sprite_batch.c  stb_image.c
src/engine/: camera_ubo.c  command_buffer.c  depth.c  descriptor.c  device.c  engine_internal.h  framebuffer.c  instance_surface.c  main.c  pipeline.c  render_pass.c  swapchain.c  synchronization.c  texture.c
src/internal/: app_info.h  camera.h  config.h  crate.h  engine.h  log.h  memory_utils.h  shaders.c  shaders.h  single_time_cmdbuf.h  uniform_buffer_object.h  vertex.h  vk_buffer_utils.h  vk_image_utils.h  vk_instance_utils.h  vk_physical_device_utils.h  vk_shader_utils.h  vk_swapchain_utils.h  vk_validation_layers_utils.h
src/internal/vulkan/utils/: README.md  buffer.h  command_buffer.h  command_pool.h  image.h  image_view.h  instance.h  memory.h  physical_device.h  shader.h  swapchain.h  validation_layers.h
